--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
             color: #fff;
         }
 
-        header h1 {
-            font-size: 36px;
-            margin: 0;
+            header h1 {
+                font-size: 36px;
+                margin: 0;
+            }
+
+        .ullared {
+            color: #000; /* Svart färg för ULLARED */
+        }
+
+        .shopping {
+            color: #fff; /* Vit färg för SHOPPING */
         }
 
         header p {
@@ -48,30 +56,31 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        .box h2 {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
+            .box h2 {
+                font-size: 24px;
+                margin-bottom: 10px;
+            }
 
-        .box p {
-            font-size: 16px;
-            color: #666;
-        }
+            .box p {
+                font-size: 16px;
+                color: #666;
+            }
 
         .appstore {
             text-align: center;
             margin-top: 40px;
         }
 
-        .appstore img {
-            width: 150px;
-        }
+            .appstore img {
+                width: 150px;
+            }
     </style>
 </head>
 <body>
 
     <header>
-        <h1>ULLARED SHOPPING</h1>
+        <img src="https://github.com/Poulsen89/UllaredShopping/blob/6cd417086effe2715ce1fb87f68bb8b4b0668cfc/Logo.png" alt="Ullared Logo" style="width: 200px;">
+        <h1><span class="ullared">ULLARED</span> <span class="shopping">SHOPPING</span></h1>
         <p>Gör din shopping enklare, roligare och smartare!</p>
     </header>
 
