--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
 
     <header>
-        <img src="https://github.com/Poulsen89/UllaredShopping/blob/6cd417086effe2715ce1fb87f68bb8b4b0668cfc/Logo.png" alt="Ullared Logo" style="width: 200px;">
+        <img src="https://raw.githubusercontent.com/Poulsen89/UllaredShopping/fbe5cfc22ee7d22dd6af70cb648ef66068f82975/Logo.png" alt="Ullared Logo" style="width: 200px;">
         <h1><span class="ullared">ULLARED</span> <span class="shopping">SHOPPING</span></h1>
         <p>Gör din shopping enklare, roligare och smartare!</p>
     </header>
