--- a/index.html
+++ b/index.html
@@ -90,17 +90,22 @@
                 margin-bottom: 10px;
             }
 
-        .appstore img {
-            width: 150px;
-            vertical-align: middle;
+        .appstore {
+            display: flex;
+            justify-content: center;
             margin-top: 20px;
         }
+
+            .appstore img {
+                width: 150px;
+                vertical-align: middle;
+            }
 
         .policy-button {
             display: inline-block;
             padding: 10px 20px;
             background-color: #89d1e7;
-            color: #fff;
+            color: #04263F;
             text-decoration: none;
             font-family: 'Poppins', sans-serif;
             border-radius: 5px;
@@ -109,7 +114,7 @@
         }
 
             .policy-button:hover {
-                background-color: #357ab8;
+                background-color: #FFF;
             }
     </style>
 </head>
@@ -123,13 +128,13 @@
 
     <div class="container">
         <div class="box">
-            <img src="https://raw.githubusercontent.com/Poulsen89/UllaredShopping/fbe5cfc22ee7d22dd6af70cb648ef66068f82975/Logo.png" alt="Kundvagn bild">
+            <img src="https://raw.githubusercontent.com/Poulsen89/UllaredShopping/d9797e4804c6b63b3ec2e8b76aa6c6c6c02652d5/3.svg" alt="Kundvagn bild">
             <h2>Kundvagn</h2>
             <p>Ta kontroll över din shoppingupplevelse på Ullared med en smart kundvagn</p>
         </div>
 
         <div class="box">
-            <img src="https://raw.githubusercontent.com/Poulsen89/UllaredShopping/fbe5cfc22ee7d22dd6af70cb648ef66068f82975/Logo.png" alt="Karta bild">
+            <img src="https://raw.githubusercontent.com/Poulsen89/UllaredShopping/d9797e4804c6b63b3ec2e8b76aa6c6c6c02652d5/1.svg" alt="Karta bild">
             <h2>Karta</h2>
             <p>Vinka adjö till de traditionella papperskartorna och välkomna en interaktiv digital version direkt i din telefon.</p>
         </div>
