--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ullared Shopping</title>
+    <title>Ullared Shopping - Shoppa Smartare!</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -144,7 +144,7 @@
     </div>
 
     <div class="appstore">
-        <a href="#">
+        <a href="https://apps.apple.com/se/app/ullared-shopping/id6468036174" target="_blank">
             <img src="https://raw.githubusercontent.com/Poulsen89/UllaredShopping/6da6f217d4cc1dbddfab9a9aad55057250e5f859/AppStore.svg" alt="Ladda ner på Appstore">
         </a>
     </div>
